--- a/Challenge.css
+++ b/Challenge.css
@@ -1,58 +1,70 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 483px;
+  min-height: 418px;
 }
 
 .u-section-1 .u-image-1 {
-  width: 370px;
-  height: 423px;
-  margin: 30px auto 0;
+  width: 380px;
+  height: 350px;
+  margin: 20px auto 0;
 }
 
 .u-section-1 .u-image-2 {
-  width: 370px;
-  height: 423px;
-  margin: -423px 0 0 auto;
+  width: 380px;
+  height: 350px;
+  margin: -350px 0 0 auto;
 }
 
 .u-section-1 .u-image-3 {
-  width: 370px;
-  height: 423px;
-  margin: -423px auto 30px 0;
+  width: 380px;
+  height: 350px;
+  margin: -350px auto 0 1px;
+}
+
+.u-section-1 .u-text-1 {
+  font-size: 0.875rem;
+  margin: 13px 0 13px auto;
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 381px;
+    min-height: 307px;
   }
 
   .u-section-1 .u-image-1 {
     width: 340px;
-    height: 389px;
+    height: 313px;
   }
 
   .u-section-1 .u-image-2 {
     width: 340px;
-    height: 389px;
-    margin-top: -389px;
+    height: 313px;
+    margin-top: -313px;
   }
 
   .u-section-1 .u-image-3 {
     width: 340px;
-    height: 389px;
-    margin-top: -389px;
+    height: 313px;
+    margin-top: -313px;
+    margin-left: 0;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 292px;
+  min-height: 335px;
 }
 
 .u-section-2 .u-text-1 {
-  margin: 29px auto 0 0;
+  margin: 20px auto 0 0;
+}
+
+.u-section-2 .u-icon-1 {
+  width: 64px;
+  height: 64px;
+  margin: -63px auto 0 328px;
 }
 
 .u-section-2 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
-  margin: 21px auto 1px 0;
+  margin: 20px auto 0 0;
 }
 
 .u-section-2 .u-btn-1 {
@@ -69,20 +81,618 @@
 
 .u-section-2 .u-btn-3 {
   background-image: none;
-  font-size: 1.125rem;
+  font-size: 1rem;
   padding: 0;
-}.u-section-3 .u-sheet-1 {
-  min-height: 783px;
 }
 
-.u-section-3 .u-text-1 {
+.u-section-2 .u-btn-4 {
+  background-image: none;
   font-size: 1rem;
-  line-height: 3;
-  margin: 0 0 60px;
+  padding: 0;
+}
+
+.u-section-2 .u-icon-2 {
+  width: 30px;
+  height: 30px;
+  margin: -40px auto 10px 0;
+  padding: 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-icon-1 {
+    margin-left: 270px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-icon-1 {
+    margin-left: 207px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-icon-1 {
+    margin-left: 155px;
+  }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 324px;
+  .u-section-2 .u-icon-1 {
+    margin-left: 98px;
   }
+}.u-section-3 .u-sheet-1 {
+  min-height: 314px;
+}
+
+.u-section-3 .u-text-1 {
+  margin: 10px auto 0 0;
+}
+
+.u-section-3 .u-text-2 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 21px auto 0 0;
+}
+
+.u-section-3 .u-btn-1 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.u-section-3 .u-btn-2 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.u-section-3 .u-btn-3 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}.u-section-4 .u-sheet-1 {
+  min-height: 477px;
+}
+
+.u-section-4 .u-icon-1 {
+  width: 30px;
+  height: 30px;
+  margin: 24px auto 0 0;
+  padding: 0;
+}
+
+.u-section-4 .u-text-1 {
+  margin: -28px 1049px 0 41px;
+}
+
+.u-section-4 .u-text-2 {
+  font-size: 1rem;
+  line-height: 2;
+  margin: 11px 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-text-1 {
+    margin-right: 890px;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-text-1 {
+    margin-right: 670px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-text-1 {
+    margin-right: 490px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-text-1 {
+    margin-right: 290px;
+  }
+}.u-section-5 .u-sheet-1 {
+  min-height: 1105px;
+}
+
+.u-section-5 .u-text-1 {
+  margin: 20px auto 0 0;
+}
+
+.u-section-5 .u-text-2 {
+  font-size: 1rem;
+  margin: 38px auto 0 0;
+}
+
+.u-section-5 .u-image-1 {
+  height: 243px;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
+.u-section-5 .u-text-3 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 31px auto 0 0;
+}
+
+.u-section-5 .u-image-2 {
+  width: 570px;
+  height: 42px;
+  margin: -96px auto 0 0;
+}
+
+.u-section-5 .u-image-3 {
+  width: 312px;
+  height: 472px;
+  margin: -281px 20px 0 auto;
+}
+
+.u-section-5 .u-text-4 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: -124px auto 0 0;
+}
+
+.u-section-5 .u-text-5 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 20px auto 0 0;
+}
+
+.u-section-5 .u-btn-1 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.u-section-5 .u-icon-1 {
+  width: 30px;
+  height: 30px;
+  margin: -184px auto 60px 0;
+  padding: 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-text-4 {
+    margin-top: -125px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1103px;
+  }
+
+  .u-section-5 .u-image-1 {
+    margin-top: 23px;
+  }
+
+  .u-section-5 .u-image-2 {
+    width: 540px;
+    height: 40px;
+  }
+
+  .u-section-5 .u-image-3 {
+    margin-top: -279px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1088px;
+  }
+
+  .u-section-5 .u-image-2 {
+    width: 340px;
+    height: 25px;
+  }
+
+  .u-section-5 .u-image-3 {
+    margin-top: -264px;
+  }
+}.u-section-6 .u-sheet-1 {
+  min-height: 701px;
+}
+
+.u-section-6 .u-text-1 {
+  margin: 30px auto 0 0;
+}
+
+.u-section-6 .u-text-2 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 22px auto 0 0;
+}
+
+.u-section-6 .u-text-3 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 22px auto 0 0;
+}
+
+.u-section-6 .u-text-4 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: -31px auto 0 0;
+}
+
+.u-section-6 .u-image-1 {
+  height: 25px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-6 .u-text-5 {
+  font-size: 1rem;
+  line-height: 3;
+  margin: 11px auto 0 0;
+}
+
+.u-section-6 .u-image-2 {
+  height: 51px;
+  margin-top: 0;
+  margin-bottom: 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-6 .u-text-4 {
+    margin-top: -43px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-6 .u-text-4 {
+    margin-top: -38px;
+  }
+
+  .u-section-6 .u-image-2 {
+    margin-bottom: 9px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-6 .u-text-4 {
+    margin-top: -34px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-6 .u-text-4 {
+    margin-top: -30px;
+  }
+}.u-section-7 .u-sheet-1 {
+  min-height: 657px;
+}
+
+.u-section-7 .u-text-1 {
+  margin: 20px auto 0 0;
+}
+
+.u-section-7 .u-text-2 {
+  font-size: 1rem;
+  margin: 20px 0 0;
+}
+
+.u-section-7 .u-text-3 {
+  font-size: 1rem;
+  line-height: 1.8;
+  margin: 10px 0 0;
+}
+
+.u-section-7 .u-text-4 {
+  font-size: 1rem;
+  margin: 28px 0 0;
+}
+
+.u-section-7 .u-text-5 {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.8;
+  margin: 10px 0 0;
+}
+
+.u-section-7 .u-text-6 {
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 20px 0 40px;
+}.u-section-8 .u-sheet-1 {
+  min-height: 491px;
+}
+
+.u-section-8 .u-text-1 {
+  margin: 24px auto 0 0;
+}
+
+.u-section-8 .u-text-2 {
+  font-size: 1rem;
+  line-height: 2.5;
+  margin: 24px auto 0 0;
+}
+
+.u-section-8 .u-text-3 {
+  font-size: 1rem;
+  line-height: 2.5;
+  margin: 11px auto 29px 0;
+}.u-section-9 .u-sheet-1 {
+  min-height: 509px;
+}
+
+.u-section-9 .u-icon-1 {
+  width: 64px;
+  height: 64px;
+  margin: 9px auto 0 153px;
+}
+
+.u-section-9 .u-text-1 {
+  margin: -48px auto 0 0;
+}
+
+.u-section-9 .u-text-2 {
+  font-size: 1rem;
+  line-height: 1.8;
+  margin: 21px 0 0;
+}
+
+.u-section-9 .u-table-1 {
+  margin-top: 32px;
+  margin-bottom: 0;
+}
+
+.u-block-5b52-16 {
+  height: 46px;
+}
+
+.u-section-9 .u-table-cell-1 {
+  background-image: none;
+}
+
+.u-section-9 .u-table-cell-2 {
+  background-image: none;
+}
+
+.u-section-9 .u-table-cell-3 {
+  background-image: none;
+}
+
+.u-section-9 .u-table-cell-4 {
+  background-image: none;
+}
+
+.u-section-9 .u-table-cell-5 {
+  background-image: none;
+}
+
+.u-section-9 .u-table-cell-6 {
+  background-image: none;
+}
+
+.u-section-9 .u-table-cell-13 {
+  background-image: none;
+}
+
+.u-section-9 .u-table-cell-14 {
+  background-image: none;
+}
+
+.u-section-9 .u-table-cell-15 {
+  background-image: none;
+}
+
+.u-section-9 .u-table-cell-16 {
+  background-image: none;
+}
+
+.u-section-9 .u-table-cell-17 {
+  background-image: none;
+}
+
+.u-section-9 .u-table-cell-18 {
+  background-image: none;
+}
+
+.u-block-5b52-43 {
+  height: 46px;
+}
+
+.u-section-9 .u-icon-2 {
+  width: 30px;
+  height: 30px;
+  margin: -131px 480px 0 auto;
+  padding: 0;
+}
+
+.u-section-9 .u-icon-3 {
+  width: 30px;
+  height: 30px;
+  margin: 16px 480px 0 auto;
+  padding: 0;
+}
+
+.u-section-9 .u-icon-4 {
+  width: 30px;
+  height: 30px;
+  margin: 15px 480px 0 auto;
+  padding: 0;
+}
+
+.u-section-9 .u-icon-5 {
+  width: 30px;
+  height: 30px;
+  margin: -120px 269px 0 auto;
+  padding: 0;
+}
+
+.u-section-9 .u-icon-6 {
+  width: 30px;
+  height: 30px;
+  margin: 61px 269px 0 auto;
+  padding: 0;
+}
+
+.u-section-9 .u-icon-7 {
+  width: 30px;
+  height: 30px;
+  margin: -75px 269px 0 auto;
+  padding: 0;
+}
+
+.u-section-9 .u-icon-8 {
+  width: 30px;
+  height: 30px;
+  margin: -75px 88px 0 auto;
+  padding: 0;
+}
+
+.u-section-9 .u-icon-9 {
+  width: 30px;
+  height: 30px;
+  margin: 61px 88px 0 auto;
+  padding: 0;
+}
+
+.u-section-9 .u-icon-10 {
+  width: 30px;
+  height: 30px;
+  margin: -75px 88px 0 auto;
+  padding: 0;
+}
+
+.u-section-9 .u-text-3 {
+  font-size: 1rem;
+  line-height: 1.8;
+  margin: 76px 0 55px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-9 .u-icon-2 {
+    margin-right: 396px;
+  }
+
+  .u-section-9 .u-icon-3 {
+    margin-top: 31px;
+    margin-right: 396px;
+  }
+
+  .u-section-9 .u-icon-4 {
+    margin-top: 20px;
+    margin-right: 396px;
+  }
+
+  .u-section-9 .u-icon-8 {
+    margin-top: -76px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-9 .u-icon-2 {
+    margin-top: -97px;
+    margin-right: 303px;
+  }
+
+  .u-section-9 .u-icon-3 {
+    margin-right: 303px;
+  }
+
+  .u-section-9 .u-icon-4 {
+    margin-right: 303px;
+  }
+
+  .u-section-9 .u-icon-5 {
+    margin-right: 206px;
+  }
+
+  .u-section-9 .u-icon-6 {
+    margin-right: 206px;
+  }
+
+  .u-section-9 .u-icon-7 {
+    margin-right: 206px;
+  }
+
+  .u-section-9 .u-text-3 {
+    margin-top: 20px;
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-9 .u-icon-2 {
+    margin-top: -69px;
+    margin-right: 227px;
+  }
+
+  .u-section-9 .u-icon-3 {
+    margin-right: 227px;
+  }
+
+  .u-section-9 .u-icon-4 {
+    margin-right: 227px;
+  }
+
+  .u-section-9 .u-icon-5 {
+    margin-right: 155px;
+  }
+
+  .u-section-9 .u-icon-6 {
+    margin-right: 155px;
+  }
+
+  .u-section-9 .u-icon-7 {
+    margin-right: 155px;
+  }
+
+  .u-section-9 .u-text-3 {
+    margin-top: -8px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-9 .u-icon-1 {
+    margin-left: 96px;
+  }
+
+  .u-section-9 .u-icon-2 {
+    margin-top: -13px;
+    margin-right: 143px;
+  }
+
+  .u-section-9 .u-icon-3 {
+    margin-right: 143px;
+  }
+
+  .u-section-9 .u-icon-4 {
+    margin-right: 143px;
+  }
+
+  .u-section-9 .u-icon-5 {
+    margin-right: 98px;
+  }
+
+  .u-section-9 .u-icon-6 {
+    margin-right: 98px;
+  }
+
+  .u-section-9 .u-icon-7 {
+    margin-right: 98px;
+  }
+
+  .u-section-9 .u-text-3 {
+    margin-top: -64px;
+  }
+}.u-section-10 .u-sheet-1 {
+  min-height: 829px;
+}
+
+.u-section-10 .u-text-1 {
+  margin: 51px auto 0 0;
+}
+
+.u-section-10 .u-text-2 {
+  font-size: 1rem;
+  line-height: 2;
+  margin: 32px 0;
 }
