--- a/Task1-Cine-reconstruction.css
+++ b/Task1-Cine-reconstruction.css
@@ -3,44 +3,9 @@
 }
 
 .u-section-1 .u-image-1 {
-  width: 370px;
-  height: 423px;
-  margin: 30px auto 0 0;
-}
-
-.u-section-1 .u-image-2 {
-  width: 370px;
-  height: 423px;
-  margin: -423px auto 0;
-}
-
-.u-section-1 .u-image-3 {
-  width: 370px;
-  height: 423px;
-  margin: -423px 0 30px auto;
-}
-
-@media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 400px;
-  }
-
-  .u-section-1 .u-image-1 {
-    width: 340px;
-    height: 389px;
-  }
-
-  .u-section-1 .u-image-2 {
-    width: 340px;
-    height: 389px;
-    margin-top: -389px;
-  }
-
-  .u-section-1 .u-image-3 {
-    width: 340px;
-    height: 389px;
-    margin-top: -389px;
-  }
+  height: 377px;
+  margin-top: 46px;
+  margin-bottom: 60px;
 }.u-section-2 .u-sheet-1 {
   min-height: 439px;
 }
@@ -65,51 +30,122 @@
   .u-section-2 .u-sheet-1 {
     min-height: 570px;
   }
-}.u-section-3 .u-sheet-1 {
-  min-height: 399px;
+} .u-section-3 {
+  background-image: none;
+}
+
+.u-section-3 .u-sheet-1 {
+  min-height: 509px;
 }
 
 .u-section-3 .u-text-1 {
   font-weight: 400;
-  margin: 21px auto 0 0;
+  margin: 22px auto 0 0;
 }
 
 .u-section-3 .u-text-2 {
+  font-size: 1rem;
+  line-height: 1.8;
+  margin: 22px 0 0;
+}
+
+.u-section-3 .u-text-3 {
+  font-size: 1rem;
+  margin: 15px auto 0;
+}
+
+.u-section-3 .u-table-1 {
+  width: 544px;
+  margin: 17px auto 50px;
+}
+
+.u-block-3ff8-12 {
+  height: 46px;
+}
+
+.u-section-3 .u-table-cell-1 {
+  background-image: none;
+}
+
+.u-section-3 .u-table-cell-2 {
+  background-image: none;
+}
+
+.u-section-3 .u-table-cell-5 {
+  background-image: none;
+}
+
+.u-section-3 .u-table-cell-6 {
+  background-image: none;
+}
+
+.u-section-3 .u-table-cell-9 {
+  background-image: none;
+}
+
+.u-section-3 .u-table-cell-10 {
+  background-image: none;
+}
+
+.u-block-3ff8-27 {
+  height: 46px;
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-table-1 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-table-1 {
+    width: 340px;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 399px;
+}
+
+.u-section-4 .u-text-1 {
+  font-weight: 400;
+  margin: 21px auto 0 0;
+}
+
+.u-section-4 .u-text-2 {
   font-size: 1rem;
   line-height: 1.8;
   margin: 22px 0 33px;
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
+  .u-section-4 .u-sheet-1 {
     min-height: 478px;
   }
-}.u-section-4 .u-sheet-1 {
+}.u-section-5 .u-sheet-1 {
   min-height: 434px;
 }
 
-.u-section-4 .u-text-1 {
+.u-section-5 .u-text-1 {
   margin-bottom: 0;
   margin-top: 20px;
 }
 
-.u-section-4 .u-text-2 {
+.u-section-5 .u-text-2 {
   font-size: 1rem;
   line-height: 1.8;
   margin: 20px 0 0;
 }
 
-.u-section-4 .u-text-3 {
+.u-section-5 .u-text-3 {
   margin: 32px auto 0 0;
 }
 
-.u-section-4 .u-text-4 {
+.u-section-5 .u-text-4 {
   font-size: 1rem;
   line-height: 1.8;
-  margin: 20px 0 32px;
+  margin: 21px 0 31px;
 }
 
-.u-section-4 .u-btn-1 {
+.u-section-5 .u-btn-1 {
   background-image: none;
   font-size: 1rem;
   padding: 0;
